# 002

./: CODE_OF_CONDUCT.md  LICENSE.txt  README.md  pyproject.toml
cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: filtering.rs  statistics.rs
lib/src/serialization/: json.rs
paper/: codemeta.json  paper.bib  paper.md
