[package]
name = "finch_cli_rust"
version = "0.5.0"
authors = ["Radioman <vincent@radioman.com>"]
description = "An implementation of min-wise independent permutation locality sensitive hashing ('MinHashing') for genomic data and command-line utility for manipulation."
keywords = ["minhash", "bioinformatics", "sketches"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/radioman/finch-rust"
license = "MIT"
readme = "../README.md"
edition = "2021"

[[bin]]
name = "finch"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
finch = { version = "0.6.1", path = "../lib" }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
proptest = "1"
